--- a/meta-agl/conf/distro/poky-agl.conf
+++ b/meta-agl/conf/distro/poky-agl.conf
@@ -55,13 +55,13 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 
 # Prefer GStreamer 1.4.x by default
-PREFERRED_VERSION_gstreamer1.0              ?= "1.6.%"
-PREFERRED_VERSION_gstreamer1.0-plugins-bad  ?= "1.6.%"
-PREFERRED_VERSION_gstreamer1.0-plugins-base ?= "1.6.%"
-PREFERRED_VERSION_gstreamer1.0-plugins-good ?= "1.6.%"
-PREFERRED_VERSION_gstreamer1.0-plugins-ugly ?= "1.6.%"
-PREFERRED_VERSION_gstreamer1.0-libav        ?= "1.6.%"
-PREFERRED_VERSION_gstreamer1.0-omx          ?= "1.6.%"
+PREFERRED_VERSION_gstreamer1.0              ?= "1.8%"
+PREFERRED_VERSION_gstreamer1.0-plugins-bad  ?= "1.8%"
+PREFERRED_VERSION_gstreamer1.0-plugins-base ?= "1.8%"
+PREFERRED_VERSION_gstreamer1.0-plugins-good ?= "1.8%"
+PREFERRED_VERSION_gstreamer1.0-plugins-ugly ?= "1.8%"
+PREFERRED_VERSION_gstreamer1.0-libav        ?= "1.8%"
+PREFERRED_VERSION_gstreamer1.0-omx          ?= "1.8%"
 
 # Prefer libjpeg-turbo
 PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
